jhm test